--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <figure>
                     <img src="./img/Sin título.png" alt="Clasificacion" id="nav-left">
                     <div class="capa">
-                    <h3>Clasificacion</h3>
+                    <h3>Clasificación</h3>
                     </div>
              </figure></a> 
 </section>
