--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <div class="fotos">
         <a href="./peluqueria/index.html" target="_blank">
         <figure>
-            <img src="./img/peluqueria.jpg" alt="mi proyecto de una peluqueriad" id="real">
+            <img src="./img/peluqueria.jpg" alt="mi proyecto de una peluquería" id="real">
             <div class="capa">
-                <h3>Peluqueria</h3>
+                <h3>Peluquería</h3>
             </div>
         </figure></a>
         
